--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,13 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vanilla App Template</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/izitoast/dist/css/iziToast.min.css">
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
 
     <main>
+      <div class="loader">Loading images, please wait...</div>
 
       <form class="form">
         <label>
@@ -17,6 +19,9 @@
         </label>
         <button type="submit">Search</button>
       </form>
+      <div class="gallery">
+
+      </div>
 
     </main>
 
