--- a/src/index.html
+++ b/src/index.html
@@ -19,9 +19,9 @@
         </label>
         <button type="submit">Search</button>
       </form>
-      <div class="gallery">
+      <ul class="gallery">
 
-      </div>
+      </ul>
 
     </main>
 
